# storm-deadeye

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  install.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  integration.yml  release.yml
crates/deadeye-artifacts/: Cargo.toml
crates/deadeye-artifacts/abis/: bivariate_amm.abi.json  bivariate_math_runtime.abi.json  deployment-mainnet.json  deployment-sepolia.json  factory.abi.json  lognormal_amm.abi.json  lognormal_math_runtime.abi.json  multinoulli_amm.abi.json  multinoulli_math_runtime.abi.json  normal_amm.abi.json  normal_math_runtime.abi.json  oracle.abi.json  release-manifest.json  restricted_collateral_token.abi.json
crates/deadeye-artifacts/src/: lib.rs
crates/deadeye-cli/: Cargo.toml  README.md
crates/deadeye-cli/src/: cli.rs  config.rs  context.rs  main.rs  output.rs  render.rs  wallet.rs
crates/deadeye-cli/src/commands/: account.rs  admin.rs  claim.rs  collateral.rs  config_cmd.rs  doctor.rs  feedback.rs  forecast.rs  lp.rs  markets.rs  mod.rs  onboard.rs  position.rs  render_helpers.rs  risk.rs  runtime_resolver.rs  trade.rs  update.rs  watch.rs
crates/deadeye-cli/src/forecast/: bayes.rs  ledger.rs  mod.rs
crates/deadeye-cli/tests/: cli_smoke.rs  cli_write_paths.rs  deploy_math_runtime.rs
crates/deadeye-collateral/: Cargo.toml
crates/deadeye-collateral/src/: bivariate.rs  categorical.rs  lib.rs  lognormal.rs
crates/deadeye-collateral/tests/: property.rs
crates/deadeye-core/: Cargo.toml
crates/deadeye-core/src/: bivariate.rs  categorical.rs  distribution.rs  error.rs  lib.rs  sq128.rs
crates/deadeye-deployer/: Cargo.toml
crates/deadeye-deployer/src/: lib.rs  runtime.rs
crates/deadeye-e2e/: Cargo.toml
crates/deadeye-e2e/src/: lib.rs
crates/deadeye-e2e/tests/: bivariate_chaos.rs  bivariate_lifecycle.rs  bulk_reader.rs  devnet_bootstrap.rs  factory_deploy.rs  fee_bump_stress.rs  indexer_smoke.rs  journal_roundtrip.rs  lognormal_chaos.rs  lognormal_hints_encoding.rs  lognormal_lifecycle.rs  lognormal_quote_execute_parity.rs  mainnet_smoke.rs  multi_rpc_failover.rs  multi_rpc_midflight_kill.rs  multinoulli_chaos.rs  multinoulli_lifecycle.rs  nonce_stress.rs  normal_chaos.rs  normal_full_lifecycle.rs  normal_lifecycle.rs  offline_optimize_quote_parity.rs  optimizer_chain_acceptance.rs  portfolio.rs  quote_stream.rs  read_only.rs  scale_chaos.rs  sepolia_smoke.rs  sq128_sqrt_parity.rs  wallet_pool_stress.rs
crates/deadeye-indexer/: Cargo.toml
crates/deadeye-indexer/src/: client.rs  dto.rs  lib.rs
crates/deadeye-optimizer/: Cargo.toml
crates/deadeye-optimizer/examples/: sigma_arb_debug.rs  sigma_arb_probe.rs
crates/deadeye-optimizer/src/: lib.rs  lognormal.rs  lp.rs  normal.rs
crates/deadeye-optimizer/tests/: grid_existence.rs
crates/deadeye-sdk/: Cargo.toml
crates/deadeye-sdk/src/: backtest.rs  bivariate.rs  bulk.rs  client.rs  error.rs  factory.rs  journal.rs  legs.rs  lib.rs  lognormal.rs  multinoulli.rs  normal.rs  oracle.rs  portfolio.rs  quote.rs  read_models.rs  stream.rs
crates/deadeye-sdk/tests/: optimizer_compose.rs
crates/deadeye-starknet/: Cargo.toml
crates/deadeye-starknet/src/: account.rs  bivariate_amm.rs  cairo_serde.rs  chain_probe.rs  collateral.rs  error.rs  execution.rs  factory.rs  lib.rs  lognormal_amm.rs  multi_rpc.rs  multinoulli_amm.rs  nonce.rs  normal_amm.rs  oracle.rs  pricing.rs  provider.rs  retry.rs  runtime.rs  selectors.rs  signer.rs  wallet_pool.rs
crates/deadeye-starknet/src/types/: bivariate.rs  common.rs  factory.rs  lognormal.rs  mod.rs  multinoulli.rs  normal.rs  oracle.rs
crates/deadeye-starknet/tests/: observability.rs  remote_signer.rs
crates/deadeye-testkit/: Cargo.toml
crates/deadeye-testkit/scripts/: precompute_casm_hashes.mjs
crates/deadeye-testkit/src/: account.rs  cartridge.rs  devnet.rs  harness.rs  lib.rs
crates/deadeye-testkit/src/fixture/: artifacts.rs  declare.rs  deploy.rs  env.rs  erc20.rs  factory_setup.rs  lifecycle.rs  mod.rs
docs/: ARCHITECTURE.md  CHAIN_ACCEPTANCE_PARITY.md  CHAOS_DRIVER_BRIEF.md  CHAOS_SUITE_STATUS.md  CLI_WAVE_A.md  CLI_WAVE_B.md  COLLATERAL_SOLVER_FIX.md  COLLATERAL_SOLVER_REVIEW.md  DEVNET_SHAKEDOWN.md  FU35_DRIVER_A.md  FU6_DRIVER_B.md  GERMANY_POST_RESULT_SNAP_PREP.md  INITIALIZE_OVERFLOW_DIAGNOSIS.md  INITIALIZE_OVERFLOW_REVIEW.md  MATH_RUNTIME_DEPLOY.md  MATH_RUNTIME_DEPLOY_REVIEW.md  MM_SDK_COMPLETE.md  OFFLINE_PREFLIGHT.md  OFFLINE_PREFLIGHT_REVIEW.md  OPTIMIZER_PROPERTY_TESTS.md  REVIEW_FU35.md  REVIEW_FU6.md  REVIEW_ITEM3_DRIVER_A.md  REVIEW_ITEM3_DRIVER_B.md  REVIEW_P4_DRIVER_A.md  SDK_CONCURRENCY_WAVE1.md  SDK_ERGONOMICS_WAVE1.md  SDK_HARDENING_WAVE3.md  SDK_PRODUCTION_WAVE3.md  SDK_QA_REVIEW.md  SDK_QA_WAVE2.md  SDK_STRATEGY_REVIEW.md  SDK_STRATEGY_WAVE2.md  SQ128_SQRT.md  SQ128_SQRT_REVIEW.md  STORM_DEADEYE_LEADERBOARD_LOOP.md  V1_VALIDATION.md  WAVE1_VALIDATION.md  WAVE3_COMPLETE.md  WRITERS_REVIEW.md
scripts/: storm_deadeye_loop.py  storm_gap_analyzer.py  storm_template_promoter.py  storm_worldcup_evidence_packet.py  test_storm_deadeye_loop.py  test_storm_gap_analyzer.py  test_storm_template_promoter.py  test_storm_worldcup_evidence_packet.py  test_verify_external_smoke_floor.py  verify_external_smoke_floor.py
skills/bayes-forecast-scratchpad/: SKILL.md
skills/deadeye-cli/: SKILL.md
skills/deadeye-feedback/: SKILL.md
skills/deadeye-superforecaster/: SKILL.md
skills/evidence-ledger/: SKILL.md
xtask/: Cargo.toml
xtask/src/: main.rs
