[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
deadeye-testkit = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "time"] }
url = { workspace = true, features = ["std"] }
