[package]
name = "deadeye-collateral"
description = "Off-chain collateral computation and minimisation for Deadeye prediction markets."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
deadeye-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true, features = ["std"] }
