[package]
name = "deadeye-deployer"
description = "Typed deployment manifests + (future) declare/deploy helpers for the Deadeye contract suite."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
deadeye-artifacts = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
starknet-core = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

[dev-dependencies]
